language/move-lang/tests/move_check/expansion/constant_invalid_names.exp
error: 

   ┌── tests/move_check/expansion/constant_invalid_names.move:3:11 ───
   │
 3 │     const c1: u64 = 0;
   │           ^^ Invalid constant name 'c1'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/constant_invalid_names.move:4:11 ───
   │
 4 │     const _C1: u64 = 0;
   │           ^^^ Invalid constant name '_C1'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/constant_invalid_names.move:5:11 ───
   │
 5 │     const Self: u64 = 0;
   │           ^^^^ Invalid module member name 'Self'. 'Self' is restricted and cannot be used to name a module member
   │

