language/move-lang/tests/move_check/expansion/constant_invalid_names.move
address 0x42 {
module M {
    const c1: u64 = 0;
    const _C1: u64 = 0;
    const Self: u64 = 0;
}
}


script {
    const c1: u64 = 0;
    const _C1: u64 = 0;
    const Self: u64 = 0;
    fun main() {}
}
